Move old_dos and device stuff into separate .h file
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@670 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Makefile.in
+++ b/Makefile.in
@@ -85,8 +85,8 @@ MAN5EXT	= 5
 MAN5DIR	= $(DESTDIR)$(mandir)/man${MAN5EXT}
 
 # objects for building mtools
-OBJS_MTOOLS = buffer.o charsetConv.o codepages.o config.o		\
-copyfile.o devices.o dirCache.o directory.o direntry.o expand.o fat.o	\
+OBJS_MTOOLS = buffer.o charsetConv.o codepages.o config.o copyfile.o	\
+device.o devices.o dirCache.o directory.o direntry.o expand.o fat.o	\
 fat_free.o file.o file_name.o filter.o force_io.o hash.o init.o lba.o	\
 llong.o lockdev.o match.o mainloop.o mattrib.o mbadblocks.o mcat.o	\
 mcd.o mclasserase.o mcopy.o mdel.o mdir.o mdoctorfat.o mdu.o		\
@@ -107,16 +107,17 @@ OBJS_FLOPPYD = floppyd.o llong.o lockdev.o
 OBJS_FLOPPYD_INSTALLTEST = floppyd_installtest.o misc.o expand.o	\
 privileges.o strtonum.o
 
-SRCS = buffer.c codepages.c config.c copyfile.c devices.c dirCache.c	\
-directory.c direntry.c expand.c fat.c fat_free.c file.c file_name.c	\
-file_read.c filter.c force_io.c hash.c init.c lba.c lockdev.c match.c	\
-mainloop.c mattrib.c mbadblocks.c mcat.c mcd.c mclasserase.c mcopy.c	\
-mdel.c mdir.c mdu.c mdoctorfat.c mformat.c minfo.c misc.c missFuncs.c	\
-mk_direntry.c mlabel.c mmd.c mmount.c mmove.c mpartition.c		\
-mshortname.c mshowfat.c mzip.c mtools.c offset.c old_dos.c		\
-open_image.c partition.c plain_io.c precmd.c privileges.c remap.c	\
-scsi_io.c scsi.c signal.c stream.c streamcache.c subdir.c swap.c	\
-unixdir.c tty.c vfat.c mkmanifest.c @FLOPPYD_IO_SRC@ @XDF_IO_SRC@
+SRCS = buffer.c codepages.c config.c copyfile.c device.c devices.c	\
+dirCache.c directory.c direntry.c expand.c fat.c fat_free.c file.c	\
+file_name.c file_read.c filter.c force_io.c hash.c init.c lba.c		\
+lockdev.c match.c mainloop.c mattrib.c mbadblocks.c mcat.c mcd.c	\
+mclasserase.c mcopy.c mdel.c mdir.c mdu.c mdoctorfat.c mformat.c	\
+minfo.c misc.c missFuncs.c mk_direntry.c mlabel.c mmd.c mmount.c	\
+mmove.c mpartition.c mshortname.c mshowfat.c mzip.c mtools.c offset.c	\
+old_dos.c open_image.c partition.c plain_io.c precmd.c privileges.c	\
+remap.c scsi_io.c scsi.c signal.c stream.c streamcache.c subdir.c	\
+swap.c unixdir.c tty.c vfat.c mkmanifest.c @FLOPPYD_IO_SRC@		\
+@XDF_IO_SRC@
 
 SRCS-@USE_FLOPPYD@ += floppyd_io.c
 SRCS-@USE_XDF@ += xdf_io.c
