--- a/configure.in
+++ b/configure.in
@@ -104,11 +104,11 @@ dnl Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_HEADER_STDBOOL
-AC_CHECK_HEADERS(getopt.h stdarg.h stdlib.h inttypes.h unistd.h linux/unistd.h \
+AC_CHECK_HEADERS(getopt.h stdarg.h stdlib.h inttypes.h unistd.h \
 libc.h fcntl.h limits.h sys/file.h sys/ioctl.h sys/time.h strings.h string.h \
 sys/param.h memory.h malloc.h io.h signal.h sys/signal.h utime.h sgtty.h \
 sys/floppy.h mntent.h sys/sysmacros.h netinet/in.h netinet/tcp.h assert.h \
-iconv.h wctype.h wchar.h locale.h xlocale.h linux/fs.h)
+iconv.h wctype.h wchar.h locale.h xlocale.h linux/fs.h dirent.h)
 AC_CHECK_HEADERS(termio.h sys/termio.h, [break])
 AC_CHECK_HEADERS(termios.h sys/termios.h, [break])
 
@@ -129,6 +129,7 @@ AC_TYPE_SIZE_T
 AC_TYPE_OFF_T
 AC_TYPE_SIGNAL
 AC_TYPE_UID_T
+AC_TYPE_PID_T
 
 AC_CHECK_TYPES(caddr_t)
 AC_CHECK_TYPES(long long)
@@ -220,10 +221,10 @@ strcasecmp strncasecmp strnlen atexit on_exit getpass memmove \
 strdup strndup strcspn strspn strtoul strtol strtoll strtoui \
 memcpy strpbrk memset setenv seteuid setresuid setpgrp \
 tcsetattr tcflush basename fchdir media_oldaliases  \
-snprintf setlocale toupper_l strncasecmp_l \
+readdir snprintf setlocale strstr toupper_l strncasecmp_l \
 wcsdup wcscasecmp wcsnlen putwc \
 getuserid getgroupid \
-alarm sigaction usleep)
+alarm sigaction usleep lstat unsetenv mkdir)
 
 
 AC_CHECK_FUNCS(utimes utime, [break])
