Fix size_t printf string on 32 bits
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@776 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/configure.in
+++ b/configure.in
@@ -139,6 +139,7 @@ AC_CHECK_SIZEOF(size_t)
 AC_CHECK_SIZEOF(off_t)
 AC_CHECK_SIZEOF(time_t)
 AC_CHECK_SIZEOF(long)
+AC_CHECK_SIZEOF(int)
 
 seek_function=
 
